feat: add trash icons to delete buttons

--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-card/exercise-card.component.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-card/exercise-card.component.html
@@ -19,6 +19,7 @@
     </div>
     <div class="actions-section">
       <button mat-raised-button class="delete-btn" (click)="onDelete($event)">
+        <mat-icon>delete</mat-icon>
         Delete
       </button>
     </div>
