--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-delete-dialog/exercise-delete-dialog.component.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/ui/exercise-delete-dialog/exercise-delete-dialog.component.html
@@ -6,6 +6,7 @@
 <mat-dialog-actions align="end">
   <button mat-button (click)="onCancel()">Cancel</button>
   <button mat-raised-button class="delete-btn" (click)="onConfirm()">
+    <mat-icon>delete</mat-icon>
     Delete
   </button>
 </mat-dialog-actions>
