--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercise-detail/exercise-detail.component.scss
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercise-detail/exercise-detail.component.scss
@@ -26,6 +26,13 @@
   vertical-align: middle;
 }
 
+.required-hint {
+  margin: 0 0 1rem 0;
+  padding: 0.5rem 0;
+  font-size: 0.875rem;
+  color: rgba(0, 0, 0, 0.6);
+}
+
 .detail-card {
   background-color: #FFF !important;
   border-radius: 12px !important;
