--- a/fitness-tracker-frontend/src/app/app.html
+++ b/fitness-tracker-frontend/src/app/app.html
@@ -2,8 +2,10 @@
   <div class="toolbar-content">
     <div class="app-brand">
       <svg class="app-logo-full" viewBox="0 0 280 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M30 0C13.4315 0 0 13.4315 0 30C0 46.5685 13.4315 60 30 60V30H60C60 13.4315 46.5685 0 30 0Z" fill="#0DF259"/>
-        <text x="75" y="42" font-family="'Poppins', sans-serif" font-size="36" font-weight="700" fill="#111813" letter-spacing="-1">FitTrack</text>
+        <path d="M30 0C13.4315 0 0 13.4315 0 30C0 46.5685 13.4315 60 30 60V30H60C60 13.4315 46.5685 0 30 0Z"
+          fill="#0DF259" />
+        <text x="75" y="42" font-family="'Poppins', sans-serif" font-size="36" font-weight="700" fill="#111813"
+          letter-spacing="-1">FitTrack</text>
       </svg>
     </div>
     <button mat-icon-button class="hamburger-btn" (click)="toggleMenu()" [class.open]="menuOpen">
@@ -15,6 +17,7 @@
       <a mat-button routerLink="/plans" routerLinkActive="active-link" (click)="closeMenu()">Plans</a>
       <a mat-button routerLink="/sessions" routerLinkActive="active-link" (click)="closeMenu()">Sessions</a>
     </nav>
+    <app-theme-toggle></app-theme-toggle>
     <span class="spacer"></span>
   </div>
 </mat-toolbar>
